tests/checker/ok/traits_multiple_impls.can
Greeting = String

Name = String

Show = () => String

Show = (Greeting) => String {
    "HELLO!"
}

Show = (Name) => String {
    "Alice"
}

main = () => Unit {
    "hi"
        -> Greeting
        -> Show
        -> Print
    "Alice"
        -> Name
        -> Show
        -> Print
}
