tests/checker/fail/camelcase_typedef.can
speed = Int

Unit => Program {
    "hi" -> Print
}
